[tool.poetry]
name = "pydapper"
version = "0.5.0"
description = "A pure python lib inspired by the dotnet lib dapper"
authors = ["Zach Schumacher <zschu15@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: MIT License',
    'Operating System :: Unix',
    'Operating System :: POSIX :: Linux',
    'Environment :: Console',
    'Environment :: MacOS X',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Internet',
    'Topic :: Database',
    'Topic :: Database :: Database Engines/Servers'
]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
dsnparse = "^0.1.15"
psycopg2-binary = { version = "^2.9.2", optional = true }
pymssql = { version = "^2.2.3", optional = true }
types-psycopg2 = { version = "^2.9.4", optional = true }
types-pymssql = { version = "^2.1.0", optional = true }
cached-property = "^1.5.2"
mysql-connector-python = {version = "^8.0.28", optional = true}
cx-Oracle = { version = "^8.3.0", optional = true }
oracledb = { version = "^1.0.0", optional = true }
aiopg = { version = "^1.3.3", optional = true }
coro-context-manager = "^0.1.1"

[tool.poetry.dev-dependencies]
black = "^22.3"
coverage = "^6.2"
devtools = "^0.8.0"
Faker = "^10.0.0"
isort = "^5.10.1"
mypy = "^0.920"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
mkdocs = "^1.2.3"
mkdocs-material = "^8.1.7"
markdown-include = "^0.6.0"
codecov = "^2.1.12"
pytest-asyncio = "^0.18.1"
pytest-mock = "^3.7.0"

[tool.poetry.extras]
psycopg2 = ["psycopg2-binary", "types-psycopg2"]
pymssql = ["pymssql", "types-pymssql"]
mysql-connector-python = ["mysql-connector-python"]
cx_Oracle = ["cx-Oracle"]
oracledb = ["oracledb"]
aiopg = ["aiopg"]

[tool.isort]
force_grid_wrap = 0
force_single_line = true
include_trailing_comma = true
line_length = 120
multi_line_output = 3
skip = ["venv", ".venv", "media", "staticfiles"]
use_parentheses = true

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.circleci
    | \.git
    | \.github
    | \.hg
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | venv
    | media
    | staticfiles
  )/
)
'''

[tool.coverage.run]
omit = [
    "pydapper/types.py",
    "tests/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "Protocol",
    "except ImportError",
    "@abstractmethod"
]
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

