[tool.poetry]
name = "pydapper"
version = "0.12.0"
description = "A python micro ORM inspired by the nuget package Dapper"
authors = ["Zach Schumacher <zschu15@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: MIT License',
    'Operating System :: Unix',
    'Operating System :: POSIX :: Linux',
    'Environment :: Console',
    'Environment :: MacOS X',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Internet',
    'Topic :: Database',
    'Topic :: Database :: Database Engines/Servers'
]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
dsnparse = "^0.2.1"
coro-context-manager = "0.2.1"

## postgresql
psycopg = { extras = ["binary"], version = "^3.2.4", optional = true }
psycopg2-binary = { version = "^2.9.10", optional = true }
types-psycopg2 = { version = "^2.9.4", optional = true }
aiopg = { version = "^1.4.0", optional = true }

## sql server
pymssql = { version = "^2.3.2", optional = true }
types-pymssql = { version = "^2.1.0", optional = true }

## mysql
mysql-connector-python = { version = "^9.2.0", optional = true }

## oracle
oracledb = { version = "^2.5.1", optional = true }

## bigquery
google-cloud-bigquery = { version = "^3.29.0", optional = true }
google-cloud-bigquery-storage = { version = "^2.27.0", optional = true }
pyarrow = { version = "*", optional = true }
numpy = { version = "*", optional = true }

[tool.poetry.group.dev.dependencies]
# testing
coverage = "*"
pytest = "8.*.*"
pytest-cov = "6.*.*"
pytest-asyncio = "0.25.*"
pytest-mock = "*"
pytest-vcr = "^1.0.2"
Faker = "*"
mypy = "*"

# linting
black = "*"
isort = "*"

# other
devtools = "*"



[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "1.*.*"
mkdocs-material = "9.*.*"
markdown-include = "*"

[tool.poetry.extras]
psycopg = ["psycopg"]
psycopg2 = ["psycopg2-binary", "types-psycopg2"]
pymssql = ["pymssql", "types-pymssql"]
mysql-connector-python = ["mysql-connector-python"]
oracledb = ["oracledb"]
aiopg = ["aiopg"]
google-cloud-bigquery = ["google-cloud-bigquery"]
# optional dep to make bigquery queries run faster
google-cloud-bigquery-storage = ["google-cloud-bigquery-storage", "pyarrow", "numpy"]

[tool.isort]
force_grid_wrap = 0
force_single_line = true
include_trailing_comma = true
line_length = 120
multi_line_output = 3
skip = ["venv", ".venv", "media", "staticfiles"]
use_parentheses = true

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.circleci
    | \.git
    | \.github
    | \.hg
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | venv
    | media
    | staticfiles
  )/
)
'''

[tool.coverage.run]
omit = [
    "pydapper/types.py",
    "tests/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "Protocol",
    "except ImportError",
    "@abstractmethod",
    "@overload"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
norecursedirs = ["venv", ".venv"]
markers = [
    "bigquery: marks tests that require bigquery (deselect with '-m \"not bigquery\"')",
    "core: marks core tests (deselect with '-m \"not core\"')",
    "mysql: marks tests that require mysql (deselect with '-m \"not mysql\"')",
    "oracle: marks tests that require oracle (deselect with '-m \"not oracle\"')",
    "postgresql: marks tests that require postgres (deselect with '-m \"not postgres\"')",
    "sqlite: marks tests that require sqlite (deselect with '-m \"not sqlite\"')",
    "mssql: marks tests that require mssql (deselect with '-m \"not mssql\")"
]

[tool.mypy]
no_implicit_optional = false

[[tool.mypy.overrides]]
module = "dsnparse.*"
ignore_missing_imports = true
